--- a/emercado/css/styles.css
+++ b/emercado/css/styles.css
@@ -212,7 +212,7 @@ td,th {
 }
 
 td img {
-  width: 130px;
+  width: 110px;
   height: 80px;
 }
 
@@ -224,7 +224,7 @@ td img {
   }
 
 body {
-  background-color: #ECEAEA;
+  background-color: #eceaea54;
 }
 
 #imgperfil {
